--- a/styles/db-theme/pages/_page--product.scss
+++ b/styles/db-theme/pages/_page--product.scss
@@ -565,40 +565,6 @@
               @media only screen and (max-width: 1080px) {
                 display: none;
               }
-
-              .size-guide-title {
-                display: block;
-                margin: 15px 0;
-              }
-
-              table {
-                border-collapse: collapse;
-                width: 100%;
-                margin: 25px 0;
-
-                tr {
-                  td {
-                    color: $white-color;
-                    font-family: $secondary-font-family;
-                    font-size: 18px;
-                    font-style: normal;
-                    font-weight: 700;
-                    font-feature-settings: 'calt' off;
-                    text-align: center;
-                    text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
-                    line-height: 1.25em;
-                    letter-spacing: -0.36px;
-                    white-space: nowrap;
-                    padding: 14px;
-                    vertical-align: middle;
-                    border: 1px solid rgba(255, 255, 255, 0.40);
-
-                    &:nth-child(1) {
-                      
-                    }
-                  }
-                }
-              }
             }
           }
         }
@@ -631,6 +597,40 @@
           font-style: normal;
           font-weight: 400;
           line-height: 1.5em;
+        }
+
+        .size-guide-title {
+          display: block;
+          margin: 15px 0;
+        }
+
+        table {
+          border-collapse: collapse;
+          width: 100%;
+          margin: 25px 0;
+
+          tr {
+            td {
+              color: $white-color;
+              font-family: $secondary-font-family;
+              font-size: 18px;
+              font-style: normal;
+              font-weight: 700;
+              font-feature-settings: 'calt' off;
+              text-align: center;
+              text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
+              line-height: 1.25em;
+              letter-spacing: -0.36px;
+              white-space: nowrap;
+              padding: 14px;
+              vertical-align: middle;
+              border: 1px solid rgba(255, 255, 255, 0.40);
+
+              &:nth-child(1) {
+                
+              }
+            }
+          }
         }
       }
     }
@@ -922,6 +922,32 @@
 
                 &:hover {
                   background-color: $primary-color;
+                }
+              }
+
+              .db-btn--out-of-stock {
+                background-color: #150E1F;
+                width: 100%;
+                padding: 15px 20px;
+                border-width: 1px;
+                border-style: solid;
+                border-color: rgba(255, 255, 255, 0.4);
+                border-radius: 0px;
+                pointer-events: none;
+                cursor: default;
+
+                .label {
+                  color: $white-color;
+                  font-family: $primary-font-family;
+                  font-size: 16px;
+                  font-style: normal;
+                  font-weight: 700;
+                  line-height: 1.25em;
+                  display: block;
+
+                  @media only screen and (max-width: 1080px) {
+                    font-size: 14px;
+                  }
                 }
               }
             }
