--- a/styles/db-theme/pages/_page--emporium.scss
+++ b/styles/db-theme/pages/_page--emporium.scss
@@ -469,7 +469,7 @@
         }
 
         .db-col {
-          &:nth-of-type(1) {
+          &.db-col-01 {
             max-width: 300px;
             min-width: 300px;
 
@@ -758,7 +758,7 @@
             }
           }
 
-          &:nth-of-type(2) {
+          &.db-col-02 {
             max-width: 1070px;
 
             @media only screen and (max-width: 768px) {
